// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flat packer with cjs in esm: target: app 1`] = `
"(function() {

/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs$$_$$in$$_$$esm */

let $n__index$$_$$cjs$$_$$in$$_$$esm = { exports: {}};




if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports.a, $n__dep$$_$$cjs$$_$$exports.exports.b);
}
if ($n__dep$$_$$cjs$$_$$module.exports.a < $n__dep$$_$$cjs$$_$$module.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$module.exports);
}
if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports);
}

const $e__index$$_$$cjs$$_$$in$$_$$esm__default = 'default';
const $e__index$$_$$cjs$$_$$in$$_$$esm__named = 'named';
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.default = $e__index$$_$$cjs$$_$$in$$_$$esm__default;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.named = $e__index$$_$$cjs$$_$$in$$_$$esm__named;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule = $n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule || true;
})()
"
`;

exports[`flat packer with cjs in esm: target: cjs 1`] = `
"
/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs$$_$$in$$_$$esm */

let $n__index$$_$$cjs$$_$$in$$_$$esm = { exports: {}};




if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports.a, $n__dep$$_$$cjs$$_$$exports.exports.b);
}
if ($n__dep$$_$$cjs$$_$$module.exports.a < $n__dep$$_$$cjs$$_$$module.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$module.exports);
}
if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports);
}

const $e__index$$_$$cjs$$_$$in$$_$$esm__default = 'default';
const $e__index$$_$$cjs$$_$$in$$_$$esm__named = 'named';
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.default = $e__index$$_$$cjs$$_$$in$$_$$esm__default;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.named = $e__index$$_$$cjs$$_$$in$$_$$esm__named;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule = $n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule || true;
module.exports = $n__index$$_$$cjs$$_$$in$$_$$esm.exports;
"
`;

exports[`flat packer with cjs in esm: target: esm 1`] = `
"
/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs$$_$$in$$_$$esm */

let $n__index$$_$$cjs$$_$$in$$_$$esm = { exports: {}};




if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports.a, $n__dep$$_$$cjs$$_$$exports.exports.b);
}
if ($n__dep$$_$$cjs$$_$$module.exports.a < $n__dep$$_$$cjs$$_$$module.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$module.exports);
}
if ($n__dep$$_$$cjs$$_$$exports.exports.a < $n__dep$$_$$cjs$$_$$exports.exports.b) {
  console.log($n__dep$$_$$cjs$$_$$exports.exports);
}

const $e__index$$_$$cjs$$_$$in$$_$$esm__default = 'default';
const $e__index$$_$$cjs$$_$$in$$_$$esm__named = 'named';
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.default = $e__index$$_$$cjs$$_$$in$$_$$esm__default;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.named = $e__index$$_$$cjs$$_$$in$$_$$esm__named;
$n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule = $n__index$$_$$cjs$$_$$in$$_$$esm.exports.__esModule || true;
export default $e__index$$_$$cjs$$_$$in$$_$$esm__default;
export {$e__index$$_$$cjs$$_$$in$$_$$esm__named as named};
"
`;

exports[`flat packer with dynamic esm dep: target: app 1`] = `
"(function() {
var __fastpack_cache__ = {};

function __fastpack_import__(f) {
  return new Promise((resolve, reject) => {
    try {
      if (__fastpack_cache__[f.name] === undefined) {
        __fastpack_cache__[f.name] = f();
      }
      resolve(__fastpack_cache__[f.name]);
    } catch (e) {
      reject(e);
    }
  });
}

/* index$$_$$dynamic */

let $n__index$$_$$dynamic = { exports: {}};
__fastpack_import__($w__dep$$_$$esm$$_$$named).then(named => {
  console.log(named);
});
$n__index$$_$$dynamic.exports.__esModule = $n__index$$_$$dynamic.exports.__esModule || false;

function $w__dep$$_$$esm$$_$$named() {

/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

return $n__dep$$_$$esm$$_$$named.exports;
}
})()
"
`;

exports[`flat packer with dynamic esm dep: target: cjs 1`] = `
"var __fastpack_cache__ = {};

function __fastpack_import__(f) {
  return new Promise((resolve, reject) => {
    try {
      if (__fastpack_cache__[f.name] === undefined) {
        __fastpack_cache__[f.name] = f();
      }
      resolve(__fastpack_cache__[f.name]);
    } catch (e) {
      reject(e);
    }
  });
}

/* index$$_$$dynamic */

let $n__index$$_$$dynamic = { exports: {}};
__fastpack_import__($w__dep$$_$$esm$$_$$named).then(named => {
  console.log(named);
});
$n__index$$_$$dynamic.exports.__esModule = $n__index$$_$$dynamic.exports.__esModule || false;
module.exports = $n__index$$_$$dynamic.exports;

function $w__dep$$_$$esm$$_$$named() {

/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

return $n__dep$$_$$esm$$_$$named.exports;
}
"
`;

exports[`flat packer with dynamic esm dep: target: esm 1`] = `
"var __fastpack_cache__ = {};

function __fastpack_import__(f) {
  return new Promise((resolve, reject) => {
    try {
      if (__fastpack_cache__[f.name] === undefined) {
        __fastpack_cache__[f.name] = f();
      }
      resolve(__fastpack_cache__[f.name]);
    } catch (e) {
      reject(e);
    }
  });
}

/* index$$_$$dynamic */

let $n__index$$_$$dynamic = { exports: {}};
__fastpack_import__($w__dep$$_$$esm$$_$$named).then(named => {
  console.log(named);
});
$n__index$$_$$dynamic.exports.__esModule = $n__index$$_$$dynamic.exports.__esModule || false;

function $w__dep$$_$$esm$$_$$named() {

/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

return $n__dep$$_$$esm$$_$$named.exports;
}
"
`;

exports[`flat packer with esm in cjs: target: app 1`] = `
"(function() {

/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm$$_$$in$$_$$cjs */

let $n__index$$_$$esm$$_$$in$$_$$cjs = { exports: {}};
const $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair = ($n__dep$$_$$esm$$_$$named.exports);
const { a: $i__index$$_$$esm$$_$$in$$_$$cjs__a, b: $i__index$$_$$esm$$_$$in$$_$$cjs__b } = ($n__dep$$_$$esm$$_$$named.exports);
const $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair = ($n__dep$$_$$esm$$_$$default.exports);

if ($i__index$$_$$esm$$_$$in$$_$$cjs__a < $i__index$$_$$esm$$_$$in$$_$$cjs__b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__a, $i__index$$_$$esm$$_$$in$$_$$cjs__b);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair);
}

$n__index$$_$$esm$$_$$in$$_$$cjs.exports.named = 'named';
$n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule = $n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule || false;
})()
"
`;

exports[`flat packer with esm in cjs: target: cjs 1`] = `
"
/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm$$_$$in$$_$$cjs */

let $n__index$$_$$esm$$_$$in$$_$$cjs = { exports: {}};
const $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair = ($n__dep$$_$$esm$$_$$named.exports);
const { a: $i__index$$_$$esm$$_$$in$$_$$cjs__a, b: $i__index$$_$$esm$$_$$in$$_$$cjs__b } = ($n__dep$$_$$esm$$_$$named.exports);
const $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair = ($n__dep$$_$$esm$$_$$default.exports);

if ($i__index$$_$$esm$$_$$in$$_$$cjs__a < $i__index$$_$$esm$$_$$in$$_$$cjs__b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__a, $i__index$$_$$esm$$_$$in$$_$$cjs__b);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair);
}

$n__index$$_$$esm$$_$$in$$_$$cjs.exports.named = 'named';
$n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule = $n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule || false;
module.exports = $n__index$$_$$esm$$_$$in$$_$$cjs.exports;
"
`;

exports[`flat packer with esm in cjs: target: esm 1`] = `
"
/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm$$_$$in$$_$$cjs */

let $n__index$$_$$esm$$_$$in$$_$$cjs = { exports: {}};
const $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair = ($n__dep$$_$$esm$$_$$named.exports);
const { a: $i__index$$_$$esm$$_$$in$$_$$cjs__a, b: $i__index$$_$$esm$$_$$in$$_$$cjs__b } = ($n__dep$$_$$esm$$_$$named.exports);
const $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair = ($n__dep$$_$$esm$$_$$default.exports);

if ($i__index$$_$$esm$$_$$in$$_$$cjs__a < $i__index$$_$$esm$$_$$in$$_$$cjs__b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__a, $i__index$$_$$esm$$_$$in$$_$$cjs__b);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__defaultPair);
}
if ($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.a < $i__index$$_$$esm$$_$$in$$_$$cjs__namedPair.b) {
  console.log($i__index$$_$$esm$$_$$in$$_$$cjs__namedPair);
}

$n__index$$_$$esm$$_$$in$$_$$cjs.exports.named = 'named';
$n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule = $n__index$$_$$esm$$_$$in$$_$$cjs.exports.__esModule || false;
"
`;

exports[`flat packer with only cjs: target: app 1`] = `
"(function() {

/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs */

let $n__index$$_$$cjs = { exports: {}};
const $i__index$$_$$cjs__exportsPair = ($n__dep$$_$$cjs$$_$$exports.exports);
const { a: $i__index$$_$$cjs__a, b: $i__index$$_$$cjs__b } = ($n__dep$$_$$cjs$$_$$exports.exports);
const $i__index$$_$$cjs__modulePair = ($n__dep$$_$$cjs$$_$$module.exports);

if ($i__index$$_$$cjs__a < $i__index$$_$$cjs__b) {
  console.log($i__index$$_$$cjs__a, $i__index$$_$$cjs__b);
}
if ($i__index$$_$$cjs__modulePair.a < $i__index$$_$$cjs__modulePair.b) {
  console.log($i__index$$_$$cjs__modulePair);
}
if ($i__index$$_$$cjs__exportsPair.a < $i__index$$_$$cjs__exportsPair.b) {
  console.log($i__index$$_$$cjs__exportsPair);
}

$n__index$$_$$cjs.exports.named = 'named';
$n__index$$_$$cjs.exports.__esModule = $n__index$$_$$cjs.exports.__esModule || false;
})()
"
`;

exports[`flat packer with only cjs: target: cjs 1`] = `
"
/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs */

let $n__index$$_$$cjs = { exports: {}};
const $i__index$$_$$cjs__exportsPair = ($n__dep$$_$$cjs$$_$$exports.exports);
const { a: $i__index$$_$$cjs__a, b: $i__index$$_$$cjs__b } = ($n__dep$$_$$cjs$$_$$exports.exports);
const $i__index$$_$$cjs__modulePair = ($n__dep$$_$$cjs$$_$$module.exports);

if ($i__index$$_$$cjs__a < $i__index$$_$$cjs__b) {
  console.log($i__index$$_$$cjs__a, $i__index$$_$$cjs__b);
}
if ($i__index$$_$$cjs__modulePair.a < $i__index$$_$$cjs__modulePair.b) {
  console.log($i__index$$_$$cjs__modulePair);
}
if ($i__index$$_$$cjs__exportsPair.a < $i__index$$_$$cjs__exportsPair.b) {
  console.log($i__index$$_$$cjs__exportsPair);
}

$n__index$$_$$cjs.exports.named = 'named';
$n__index$$_$$cjs.exports.__esModule = $n__index$$_$$cjs.exports.__esModule || false;
module.exports = $n__index$$_$$cjs.exports;
"
`;

exports[`flat packer with only cjs: target: esm 1`] = `
"
/* dep$$_$$cjs$$_$$exports */

let $n__dep$$_$$cjs$$_$$exports = { exports: {}};
$n__dep$$_$$cjs$$_$$exports.exports.a = 1;
$n__dep$$_$$cjs$$_$$exports.exports.b = 2;
$n__dep$$_$$cjs$$_$$exports.exports.__esModule = $n__dep$$_$$cjs$$_$$exports.exports.__esModule || false;

/* dep$$_$$cjs$$_$$module */

let $n__dep$$_$$cjs$$_$$module = { exports: {}};
$n__dep$$_$$cjs$$_$$module.exports = {
  a: 1,
  b: 2
};
$n__dep$$_$$cjs$$_$$module.exports.__esModule = $n__dep$$_$$cjs$$_$$module.exports.__esModule || false;

/* index$$_$$cjs */

let $n__index$$_$$cjs = { exports: {}};
const $i__index$$_$$cjs__exportsPair = ($n__dep$$_$$cjs$$_$$exports.exports);
const { a: $i__index$$_$$cjs__a, b: $i__index$$_$$cjs__b } = ($n__dep$$_$$cjs$$_$$exports.exports);
const $i__index$$_$$cjs__modulePair = ($n__dep$$_$$cjs$$_$$module.exports);

if ($i__index$$_$$cjs__a < $i__index$$_$$cjs__b) {
  console.log($i__index$$_$$cjs__a, $i__index$$_$$cjs__b);
}
if ($i__index$$_$$cjs__modulePair.a < $i__index$$_$$cjs__modulePair.b) {
  console.log($i__index$$_$$cjs__modulePair);
}
if ($i__index$$_$$cjs__exportsPair.a < $i__index$$_$$cjs__exportsPair.b) {
  console.log($i__index$$_$$cjs__exportsPair);
}

$n__index$$_$$cjs.exports.named = 'named';
$n__index$$_$$cjs.exports.__esModule = $n__index$$_$$cjs.exports.__esModule || false;
"
`;

exports[`flat packer with only esm: target: app 1`] = `
"(function() {

/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm */

let $n__index$$_$$esm = { exports: {}};




if ($e__dep$$_$$esm$$_$$named__a < $e__dep$$_$$esm$$_$$named__b) {
  console.log($e__dep$$_$$esm$$_$$named__a, $e__dep$$_$$esm$$_$$named__b);
}
if ($e__dep$$_$$esm$$_$$default__default.a < $e__dep$$_$$esm$$_$$default__default.b) {
  console.log($e__dep$$_$$esm$$_$$default__default);
}
if ($n__dep$$_$$esm$$_$$named.exports.a < $n__dep$$_$$esm$$_$$named.exports.b) {
  console.log($n__dep$$_$$esm$$_$$named.exports);
}

const $e__index$$_$$esm__default = 'default';
const $e__index$$_$$esm__named = 'named';
$n__index$$_$$esm.exports.default = $e__index$$_$$esm__default;
$n__index$$_$$esm.exports.named = $e__index$$_$$esm__named;
$n__index$$_$$esm.exports.__esModule = $n__index$$_$$esm.exports.__esModule || true;
})()
"
`;

exports[`flat packer with only esm: target: cjs 1`] = `
"
/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm */

let $n__index$$_$$esm = { exports: {}};




if ($e__dep$$_$$esm$$_$$named__a < $e__dep$$_$$esm$$_$$named__b) {
  console.log($e__dep$$_$$esm$$_$$named__a, $e__dep$$_$$esm$$_$$named__b);
}
if ($e__dep$$_$$esm$$_$$default__default.a < $e__dep$$_$$esm$$_$$default__default.b) {
  console.log($e__dep$$_$$esm$$_$$default__default);
}
if ($n__dep$$_$$esm$$_$$named.exports.a < $n__dep$$_$$esm$$_$$named.exports.b) {
  console.log($n__dep$$_$$esm$$_$$named.exports);
}

const $e__index$$_$$esm__default = 'default';
const $e__index$$_$$esm__named = 'named';
$n__index$$_$$esm.exports.default = $e__index$$_$$esm__default;
$n__index$$_$$esm.exports.named = $e__index$$_$$esm__named;
$n__index$$_$$esm.exports.__esModule = $n__index$$_$$esm.exports.__esModule || true;
module.exports = $n__index$$_$$esm.exports;
"
`;

exports[`flat packer with only esm: target: esm 1`] = `
"
/* dep$$_$$esm$$_$$named */

let $n__dep$$_$$esm$$_$$named = { exports: {}};
const $e__dep$$_$$esm$$_$$named__a = 1;
const $e__dep$$_$$esm$$_$$named__b = 2;
$n__dep$$_$$esm$$_$$named.exports.a = $e__dep$$_$$esm$$_$$named__a;
$n__dep$$_$$esm$$_$$named.exports.b = $e__dep$$_$$esm$$_$$named__b;
$n__dep$$_$$esm$$_$$named.exports.__esModule = $n__dep$$_$$esm$$_$$named.exports.__esModule || true;

/* dep$$_$$esm$$_$$default */

let $n__dep$$_$$esm$$_$$default = { exports: {}};
const $e__dep$$_$$esm$$_$$default__default = {
  a: 1,
  b: 2
};
$n__dep$$_$$esm$$_$$default.exports.default = $e__dep$$_$$esm$$_$$default__default;
$n__dep$$_$$esm$$_$$default.exports.__esModule = $n__dep$$_$$esm$$_$$default.exports.__esModule || true;

/* index$$_$$esm */

let $n__index$$_$$esm = { exports: {}};




if ($e__dep$$_$$esm$$_$$named__a < $e__dep$$_$$esm$$_$$named__b) {
  console.log($e__dep$$_$$esm$$_$$named__a, $e__dep$$_$$esm$$_$$named__b);
}
if ($e__dep$$_$$esm$$_$$default__default.a < $e__dep$$_$$esm$$_$$default__default.b) {
  console.log($e__dep$$_$$esm$$_$$default__default);
}
if ($n__dep$$_$$esm$$_$$named.exports.a < $n__dep$$_$$esm$$_$$named.exports.b) {
  console.log($n__dep$$_$$esm$$_$$named.exports);
}

const $e__index$$_$$esm__default = 'default';
const $e__index$$_$$esm__named = 'named';
$n__index$$_$$esm.exports.default = $e__index$$_$$esm__default;
$n__index$$_$$esm.exports.named = $e__index$$_$$esm__named;
$n__index$$_$$esm.exports.__esModule = $n__index$$_$$esm.exports.__esModule || true;
export default $e__index$$_$$esm__default;
export {$e__index$$_$$esm__named as named};
"
`;

exports[`flat packer with single js: target: app 1`] = `
"(function() {

/* index$$_$$single */

let $n__index$$_$$single = { exports: {}};
const $i__index$$_$$single__a = 1;
if ($i__index$$_$$single__a < 2) {
  console.log($i__index$$_$$single__a);
}

const $e__index$$_$$single__default = 'default';
const $e__index$$_$$single__named = 'named';
$n__index$$_$$single.exports.default = $e__index$$_$$single__default;
$n__index$$_$$single.exports.named = $e__index$$_$$single__named;
$n__index$$_$$single.exports.__esModule = $n__index$$_$$single.exports.__esModule || true;
})()
"
`;

exports[`flat packer with single js: target: cjs 1`] = `
"
/* index$$_$$single */

let $n__index$$_$$single = { exports: {}};
const $i__index$$_$$single__a = 1;
if ($i__index$$_$$single__a < 2) {
  console.log($i__index$$_$$single__a);
}

const $e__index$$_$$single__default = 'default';
const $e__index$$_$$single__named = 'named';
$n__index$$_$$single.exports.default = $e__index$$_$$single__default;
$n__index$$_$$single.exports.named = $e__index$$_$$single__named;
$n__index$$_$$single.exports.__esModule = $n__index$$_$$single.exports.__esModule || true;
module.exports = $n__index$$_$$single.exports;
"
`;

exports[`flat packer with single js: target: esm 1`] = `
"
/* index$$_$$single */

let $n__index$$_$$single = { exports: {}};
const $i__index$$_$$single__a = 1;
if ($i__index$$_$$single__a < 2) {
  console.log($i__index$$_$$single__a);
}

const $e__index$$_$$single__default = 'default';
const $e__index$$_$$single__named = 'named';
$n__index$$_$$single.exports.default = $e__index$$_$$single__default;
$n__index$$_$$single.exports.named = $e__index$$_$$single__named;
$n__index$$_$$single.exports.__esModule = $n__index$$_$$single.exports.__esModule || true;
export default $e__index$$_$$single__default;
export {$e__index$$_$$single__named as named};
"
`;
